# mc_rtc-magnum

./: .clang-format  .clang-format-common.sh  .gitignore  .gitmodules  .mergify.yml  .pre-commit-config.yaml  CMakeLists.txt  README.md  flake.nix
.github/workflows/: nix.yml
src/: CMakeLists.txt  Camera.cpp  Camera.h  Category.cpp  Category.h  Client.cpp  Client.h  MagnumClient.cpp  MagnumClient.h  McRtcGui.cpp  McRtcGui.h  Mesh.cpp  Mesh.h  Primitives.cpp  Primitives.h  Widget.h  main.cpp
src/assets/: Roboto_Bold_ttf.h  Roboto_Regular_ttf.h
src/ticker/: ticker.cpp
src/widgets/: ArrayInput.h  ArrayLabel.h  Arrow.h  Button.h  Checkbox.h  ComboInput.h  DataComboInput.h  Force.h  Form.h  IntegerInput.h  Label.h  NumberInput.h  NumberSlider.h  Point3D.cpp  Point3D.h  Polygon.cpp  Polygon.h  Polyhedron.cpp  Polyhedron.h  Robot.cpp  Robot.h  Rotation.h  Schema.cpp  Schema.h  StringInput.h  Table.h  Trajectory.h  Transform.h  Visual.cpp  Visual.h  Widget.h  XYTheta.h  utils.h
src/widgets/details/: ControlAxis.h  InteractiveMarker.cpp  InteractiveMarker.h  SingleInput.h  TransformBase.h
src/widgets/form/: schema.cpp  schema.h  widgets.cpp  widgets.h
